fixed seed errors and improved spacing on edit relationships page

--- a/public/css/relationships.css
+++ b/public/css/relationships.css
@@ -2,12 +2,12 @@
 #relationships {
 	margin-right: auto;
 	margin-left: auto;
-	border-spacing: 5px;
+	border-spacing: 10px;
 }
 
 #relationships td, #relationships th {
 	padding: 10px;
-	width: 250px;
+	width: 240px;
 }
 
 .name {
@@ -72,8 +72,6 @@
 	border:none;
 	padding: 0px;
 	font-weight: bold;
-	clear: right;
-	clear: left;
 }
 
 .deleteRelationshipButton {
